--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     ],
     "homepage": "https://github.com/ilmanhdyt/ShiraoriBOT-Md",
     "author": {
-        "name": "ozan"
+        "name": "Ramdani Official"
     },
     "repository": {
         "type": "git",
